objects/FundingOpportunity.object
<CustomObject>
    <fields>
        <fullName>Announcement_Date__c</fullName>
        <label>Announcement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMS_Excerpt__c</fullName>
        <label>CMS Excerpt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMS_Image_URL__c</fullName>
        <label>CMS Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligibility_Criteria__c</fullName>
        <label>Eligibility Criteria</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Opportunity_Number__c</fullName>
        <displayFormat>FO{YY}-{000}</displayFormat>
        <label>Funding Opportunity Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Invite_Only_Funding_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invite Only Funding Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Funding_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <sharingModel>Read</sharingModel>
</CustomObject>